[package]
name = "transact"
version = "0.1.0"
edition = "2021"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
description = "Toy transaction library"
repository = "https://github.com/azriel91/transact"
readme = "README.md"
keywords = []
license = "MIT OR Apache-2.0"

[[bin]]
name = "transact"

[dependencies]
csv = "1.1.6"
rust_decimal = { version = "1.25", features = ["serde-with-float"] }
rust_decimal_macros = "1.25"
futures = "0.3.21"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["io-util", "rt"] }
